--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,12 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen w-full bg-slate-900">
 
 	<div class="grid grid-cols-2">
-		<div class="sidebar bg-slate-900 w-screen/6">
+		<div class="sidebar bg-slate-900 w-100">
 		</div>
 		<div class="container bg-slate-900 mx-auto">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4">
-		  <div class="bg-pink-500 h-screen">
+		  <div class="bg-pink-500 h-screen w-screen">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
@@ -55,7 +55,7 @@ import Cont from '../components/Cont.astro';
 																																																																						   </div>
 			<Cont />
 		  </div>
-		  <div class="bg-slate-900 w-screen/6"><BarraLateral /></div>
+		  <div class="bg-slate-900 w-100"><BarraLateral /></div>
 		</div>
 	  </div>
     </div>
