--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ import Cont from '../components/Cont.astro';
 																																																																						   </div>
 			<Cont />
 		  </div>
-		  <div class="sidebar-right bg-slate-900 w-100"><BarraLateral /></div>
+		  <div class="sidebar-right bg-slate-900 mx-auto"><BarraLateral /></div>
 		</div>
 	  </div>
     </div>
