--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,8 @@ import Cont from '../components/Cont.astro';
 																																																																						   
 																																																																						   
 																																																																						   </div>
-			<Cont />
+		
+																																																																						</div>																																																																			   <Cont />
 			</div>
 			</div>
 		  <div class="sidebar-right bg-slate-900 mx-auto"><BarraLateral /></div>
