--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ import Cont from '../components/Cont.astro';
 																																																																				         </div>
 																																																																						 </div>
 																																																																					 
-	        <cont />
+	        <Cont />
 		
 		  <div class="sidebar-right bg-slate-900 mx-auto"><BarraLateral /></div>
 		</div>
