--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ import Cont from '../components/Cont.astro';
 																																																																						 </div>
 																																																																					 
 	        <Cont />
-		
+		</div>
 		  <div class="sidebar-right bg-slate-900 mx-auto"><BarraLateral /></div>
 		</div>
 	  </div>
