--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,12 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen w-full bg-slate-900">
 
 	<div class="grid grid-cols-2">
-		<div class="sidebar bg-slate-900 w-100">
+		<div class="sidebar bg-slate-900">
 		</div>
 		<div class="container bg-slate-900 mx-auto">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4">
-		  <div class="bg-pink-500 h-screen w-1/6">
+		  <div class="bg-pink-500 h-screen">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
@@ -54,7 +54,7 @@ import Cont from '../components/Cont.astro';
 																																																																					 
 	        <Cont />
 		</div>
-		  <div class="sidebar-right bg-slate-900 mx-auto"><BarraLateral /></div>
+		  <div class="sidebar-right bg-slate-900"><BarraLateral /></div>
 		</div>
 	  </div>
     </div>
