--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen w-full bg-slate-900">
 
 	<div class="grid grid-cols-2">
-		<div class="sidebar bg-slate-900">
+		<div class="sidebar bg-slate-900 flex">
 		</div>
 		<div class="container bg-slate-900 mx-auto">
 		<Navbar />
