--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Cont from '../components/Cont.astro';
 		<div class="container bg-slate-900 mx-auto">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4">
-		  <div class="bg-pink-500 h-screen mx-auto -  ">
+		  <div class="bg-pink-500 h-20% ">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
