--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,12 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen w-full bg-slate-900">
 
 	<div class="grid grid-cols-2">
-		<div class="sidebar bg-slate-900 flex">
+		<div class="sidebar bg-slate-900 w-20% flex">
 		</div>
 		<div class="container bg-slate-900 mx-auto">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4">
-		  <div class="bg-pink-500 h-20% ">
+		  <div class="bg-pink-500 h-screen ">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
