--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Cont from '../components/Cont.astro';
 <html lang="es">
 <body class="min-h-screen w-full bg-slate-900">
 
-	<div class="grid grid-cols-2">
+	<div class="grid grid-cols-2 gap-2">
 		<div class="sidebar bg-slate-900 w-20% flex">
 		</div>
 		<div class="container bg-slate-900 mx-auto">
