--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,8 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen w-full bg-slate-900 container mx-auto">
 
 	<div class="grid grid-cols-2 gap-2">
-		<div class=" bg-white-900 w-1/4"> ola :)
+		<div class=" comtainer bg-white-900 w-1/4"> ola :)
+<div class="bg-white-900"> "epale "</div>
 		</div>
 		<div class="container bg-slate-900 mx-auto">
 		<Navbar />
