--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Cont from '../components/Cont.astro';
 		<div class=" comtainer bg-white-900 w-1/4"> ola :)
 <div class="bg-white-900"> "epale "</div>
 		</div>
-		<div class="container bg-slate-900 mx-auto">
+		<div class="container bg-slate-900 mx-auto w-3/4">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4">
 		  <div class="bg-pink-500 h-screen ">
