--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ import Cont from '../components/Cont.astro';
 
 <!DOCTYPE html>
 <html lang="es">
-<body class="min-h-screen w-full bg-slate-900 container mx-auto">
+<body class="min-h-screen bg-slate-900 container mx-auto">
 
-	<div class="grid grid-cols-2 gap-2">
+	<div class="grid grid-cols-2 gap-2 mx-auto ">
 		<div class=" comtainer bg-white-900 w-1/4"> ola :)
 <div class="bg-white-900"> "epale "</div>
 		</div>
