--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen bg-slate-900 container mx-auto">
 
 	<div class="grid grid-cols-2 gap-2 mx-auto ">
-		<div class="container bg-slate-900 mx-auto w-3/4">
+		<div class="container bg-white-900 w-10">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4">
 		  <div class="bg-pink-500 h-screen ">
