--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,11 @@ import Cont from '../components/Cont.astro';
 <html lang="es">
 <body class="min-h-screen bg-slate-900 container mx-auto">
 
-	<div class="grid grid-cols-2 gap-2 mx-auto ">
-		<div class="container bg-white-900 w-10">
+	<div class="grid grid-cols-2 gap-4 mx-auto ">
+		<div class="container bg-white-900 w-20">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4">
-		  <div class="bg-pink-500 h-screen ">
+		  <div class="bg-pink-500 h-screen w-75 ">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
