--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Cont from '../components/Cont.astro';
 	<div class="grid grid-cols-2 gap-4 mx-auto ">
 		<div class="container bg-white-900 w-20">
 		<Navbar />
+		</div>
 		<div class="bg-slate-900 grid grid-cols-2 gap-4">
 		  <div class="bg-pink-500 h-screen w-75 ">
 			    
