--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Cont from '../components/Cont.astro';
 		<div class="container bg-white-900 w-20">
 		<Navbar />
 		</div>
-		<div class="bg-slate-900 grid grid-cols-2 gap-4">
-		  <div class="bg-pink-500 h-screen w-75 ">
+		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
+		  <div class="bg-pink-500 h-screen ">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
