--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,8 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen bg-slate-900 container mx-auto">
 
 	<div class="grid grid-cols-2 gap-4 mx-auto ">
-		<div class="container bg-white-900 w-20">
-		<Navbar />
-		</div>
+		<div class="container"></div>
+	<div class="container">
 		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
 		  <div class="bg-pink-500 h-screen ">
 			    
@@ -54,9 +53,10 @@ import Cont from '../components/Cont.astro';
 	        <Cont />
 		</div>
 		  <div class="sidebar-right bg-slate-900"><BarraLateral /></div>
-		</div>
+	</div>
 	  </div>
-    </div>
+	  </div>
+    
 
 											  </body>
 											  </html>
