--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,9 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen bg-slate-900 container mx-auto">
 
 	<div class="grid grid-cols-2 gap-4 mx-auto ">
-		<div class="container"></div>
-	<div class="container">
+		<div class="container">faltó </div>
+	<div class="container mx-auto ">
+		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
 		  <div class="bg-pink-500 h-screen ">
 			    
