--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Cont from '../components/Cont.astro';
 
 	<div class="grid grid-cols-2 gap-4 mx-auto ">
 		<div class="container">faltó </div>
-	<div class="container mx-auto ">
+	<div class="container mx-auto h-screen ">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
 		  <div class="bg-pink-500 h-screen ">
