--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen bg-slate-900 container mx-auto">
 
 	<div class="grid grid-cols-2 gap-4 mx-auto ">
-		<div class="container">faltó </div>
+		<div class="container w-1/4">faltó </div>
 	<div class="container mx-auto h-screen ">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
