--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Cont from '../components/Cont.astro';
 <html lang="es">
 <body class="min-h-screen bg-slate-900 container mx-auto">
 
-	<div class="grid grid-cols-2 gap-4 mx-auto ">
+	<div class="grid grid-cols-2 gap-4 ">
 		<div class="container w-1/4">faltó </div>
 	<div class="container mx-auto h-screen ">
 		<Navbar />
