--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import Cont from '../components/Cont.astro';
 <html lang="es">
 <body class="min-h-screen bg-slate-900 container mx-auto">
 
-	<div class="grid grid-cols-2 gap-4 ">
-		<div class="container w-1/4">faltó </div>
-	<div class="container mx-auto h-screen ">
+	<div class="grid grid-cols-[1fr,3fr] gap-4 ">
+		<div id="berro" class="container ">faltó </div>
+	<div id="berro2" class="container mx-auto h-screen ">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
 		  <div class="bg-pink-500 h-screen ">
