--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ import Cont from '../components/Cont.astro';
 																																																																					 
 	        <Cont />
 		</div>
-		  <div class="sidebar-right bg-slate-900"><BarraLateral /></div>
+		  <div class="sidebar-right bg-slate-900 w-25"><BarraLateral /></div>
 	</div>
 	  </div>
 	  </div>
