--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Cont from '../components/Cont.astro';
 
 	<div class="grid grid-cols-[1fr,3fr] gap-4 ">
 		<div id="berro" class="container ">faltó </div>
-	<div id="berro2" class="container mx-auto h-screen ">
+	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
 		  <div class="bg-pink-500 h-screen ">
@@ -53,7 +53,7 @@ import Cont from '../components/Cont.astro';
 																																																																					 
 	        <Cont />
 		</div>
-		  <div class="sidebar-right bg-slate-900 w-25"><BarraLateral /></div>
+		  <div class="sidebar-right bg-slate-900 w-[15%]"><BarraLateral /></div>
 	</div>
 	  </div>
 	  </div>
