--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Cont from '../components/Cont.astro';
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
-		  <div class="bg-pink-500 h-screen ">
+		  <div class="bg-pink-500 h-screen w-[85%]">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
