--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Cont from '../components/Cont.astro';
 		<div id="berro" class="container ">faltó </div>
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
-		<div class="bg-slate-900 grid grid-cols-2 gap-4 w-75">
-		  <div class="bg-pink-500 h-screen w-[85%]">
+		<div class="bg-slate-900 grid grid-cols-2 w-full">
+		  <div class="bg-pink-500 h-screen w-[85%] mx-auto">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
@@ -53,7 +53,7 @@ import Cont from '../components/Cont.astro';
 																																																																					 
 	        <Cont />
 		</div>
-		  <div class="sidebar-right bg-slate-900 w-[15%]"><BarraLateral /></div>
+		  <div class="sidebar-right bg-slate-900 w-[15%] mx-auto"><BarraLateral /></div>
 	</div>
 	  </div>
 	  </div>
