--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Cont from '../components/Cont.astro';
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-2 w-full">
-		  <div class="bg-pink-500 h-screen w-fu mx-auto">
+		  <div class="bg-pink-500 flex h-screen w-screen mx-auto">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
@@ -53,7 +53,7 @@ import Cont from '../components/Cont.astro';
 																																																																					 
 	        <Cont />
 		</div>
-		  <div class="sidebar-right bg-slate-900 w-[15%] mx-auto"><BarraLateral /></div>
+		  <div class="sidebar-right px=auto bg-slate-900 w-[15%] mx-auto"><BarraLateral /></div>
 	</div>
 	  </div>
 	  </div>
