--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ import Cont from '../components/Cont.astro';
 																																																																					 
 	        <Cont />
 		</div>
-		  <div class="sidebar-right px=auto bg-slate-900 w-[15%] mx-auto"><BarraLateral /></div>
+		  <div class="sidebar-right px=auto bg-slate-900 w-[15%] mx-0"><BarraLateral /></div>
 	</div>
 	  </div>
 	  </div>
