--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Cont from '../components/Cont.astro';
 		<div id="berro" class="container ">faltó </div>
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
-		<div class="bg-slate-900 grid grid-cols-2 w-full">
-		  <div class="grid grid-columns-1 bg-pink-500 flex mx-0">
+		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full">
+		  <div id="jua" class="grid grid-columns-1 bg-pink-500 flex mx-0 ">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
@@ -51,9 +51,9 @@ import Cont from '../components/Cont.astro';
 																																																																				         </div>
 																																																																						 </div>
 																																																																					 
-	        <Cont />
+	        <Cont class="mx-0"/>
 		</div>
-		  <div class="sidebar-right px=auto bg-slate-900 w-[15%] mx-0"><BarraLateral /></div>
+		  <div id="joa" class="sidebar-right px=auto bg-slate-900 w-[15%] mx-0"><BarraLateral /></div>
 	</div>
 	  </div>
 	  </div>
