--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Cont from '../components/Cont.astro';
 		<div id="berro" class="container ">faltó </div>
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
-		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full">
+		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full relative">
 		  <div id="jua" class="grid grid-columns-1 bg-pink-500 flex mx-0 ">
 			    
 			        <div class="flex-grow bg-slate-900">
@@ -51,9 +51,9 @@ import Cont from '../components/Cont.astro';
 																																																																				         </div>
 																																																																						 </div>
 																																																																					 
-	        <Cont class="mx-0"/>
+	        
 		</div>
-		  <div id="joa" class="sidebar-right px=auto bg-slate-900 w-[15%] mx-0"><BarraLateral /></div>
+		<div id="joa" class="absolute top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral /></div>
 	</div>
 	  </div>
 	  </div>
