--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ import Cont from '../components/Cont.astro';
 																																																																			       </div> 
 																																																																				         </div>
 																																																																						 </div>
-																																																																					 
+		<Cont />																																																																			 
 	        
 		</div>
 		<div id="joa" class="absolute top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral /></div>
