--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BarraLateral from '../components/BarraLateral.astro';
 import Navbar from '../components/Navbar.astro';
 import Cont from '../components/Cont.astro';
+import Sidebar from '../components/Sidebar.astro'
 ---
 
 <!DOCTYPE html>
@@ -9,7 +10,7 @@ import Cont from '../components/Cont.astro';
 <body class="min-h-screen bg-slate-900 container mx-auto">
 
 	<div class="grid grid-cols-[1fr,3fr] gap-4 ">
-		<div id="berro" class="container ">faltó </div>
+		<div id="berro" class="container "> <Sidebar /> </div>
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full relative">
