--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Sidebar from '../components/Sidebar.astro'
 
 <!DOCTYPE html>
 <html lang="es">
-<body class="min-h-screen bg-slate-900 container mx-auto left-0">
+<body class="min-h-screen bg-slate-900 container mx-auto ml-0">
 
 	<div class="grid grid-cols-[1fr,3fr] gap-4 ">
 		<div id="berro" class="container absolute"> <Sidebar /> </div>
