--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -5,31 +5,31 @@
   <h2 class="text-2xl font-bold mb-6">Menú de Películas</h2>
     <ul class="space-y-4">
         <li>
-              <a href="#" class="flex items-center p-2 hover:bg-gray-700 rounded">
+              <a href="#" class="flex items-center w-full p-2 hover:bg-gray-700 rounded">
                       <span class="material-icons">home</span>
                               <span class="ml-2">Inicio</span>
                                     </a>
                                         </li>
                                             <li>
-                                                  <a href="#" class="flex items-center p-2 hover:bg-gray-700 rounded">
+                                                  <a href="#" class="flex items-center w-full p-2 hover:bg-gray-700 rounded">
                                                           <span class="material-icons">movie</span>
                                                                   <span class="ml-2">Películas</span>
                                                                         </a>
                                                                             </li>
                                                                                 <li>
-                                                                                      <a href="#" class="flex items-center p-2 hover:bg-gray-700 rounded">
+                                                                                      <a href="#" class="flex items-center w-full p-2 hover:bg-gray-700 rounded">
                                                                                               <span class="material-icons">star</span>
                                                                                                       <span class="ml-2">Favoritas</span>
                                                                                                             </a>
                                                                                                                 </li>
                                                                                                                     <li>
-                                                                                                                          <a href="#" class="flex items-center p-2 hover:bg-gray-700 rounded">
+                                                                                                                          <a href="#" class="flex items-center w-full p-2 hover:bg-gray-700 rounded">
                                                                                                                                   <span class="material-icons">search</span>
                                                                                                                                           <span class="ml-2">Buscar</span>
                                                                                                                                                 </a>
                                                                                                                                                     </li>
                                                                                                                                                         <li>
-                                                                                                                                                              <a href="#" class="flex items-center p-2 hover:bg-gray-700 rounded">
+                                                                                                                                                              <a href="#" class="flex items-center w-full p-2 hover:bg-gray-700 rounded">
                                                                                                                                                                       <span class="material-icons">settings</span>
                                                                                                                                                                               <span class="ml-2">Configuración</span>
                                                                                                                                                                                     </a>
