--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Sidebar from '../components/Sidebar.astro'
 <body class="min-h-screen bg-slate-900 container mx-auto ml-0">
 
 	<div class="grid grid-cols-[1fr,3fr] gap-4 ">
-		<div id="berro" class="container bg-slate-900"> <Sidebar /> </div>
+		<div id="berro" class="container bg-slate-900"> <Sidebar class="bg-slate-900" /> </div>
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full relative">
