--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -1,7 +1,7 @@
 <!-- component -->
 <!-- component -->
 
-<aside class="pb-3 px-6 w-full flex flex-col justify-between  border-r bg-white  md:w-4/12 lg:w-[25%] xl:w-[20%] 2xl:w-[15%] h-screen">
+<aside class="pb-3 px-6 w-full flex flex-col justify-between  border-r bg-slate-900  md:w-4/12 lg:w-[25%] xl:w-[20%] 2xl:w-[15%] h-screen">
     <div class="flex flex-col h-full justify-between">
             <div class="-mx-6 px-6 py-4">
                         <a href="#" title="home">
