--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -2,13 +2,13 @@
 <!-- component -->
 
 <aside class="pb-3 px-6 w-full flex flex-col justify-between  border-r bg-slate-900  md:w-4/12 lg:w-[25%] xl:w-[20%] 2xl:w-[15%] h-screen">
-    <div class="flex flex-col h-full justify-between">
+    <div class="flex flex-col w-full h-full justify-between">
             <div class="-mx-6 px-6 py-4">
                         <a href="#" title="home">
                                         <img src="https://www.emprenderconactitud.com/img/POC%20WCS%20(1).png" class="w-40" alt="POC WCS">
                                                     </a>
                                                             </div>
-                                                                    <ulaaaaáaa class="space-y-2 tracking-wide mt-8">
+                                                                    <ul class="space-y-2 tracking-wide mt-8">
                                                                                 <li>
                                                                                                 <a href="#" aria-label="dashboard" class="relative px-4 py-3 flex items-center space-x-4 rounded-lg text-white bg-white-100">
                                                                                                                     <svg class="text-white flex"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  
