--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BarraLateral from '../components/BarraLateral.astro';
 import Navbar from '../components/Navbar.astro';
 import Cont from '../components/Cont.astro';
 import Sidebar from '../components/Sidebar.astro'
+import hot from '../components/hot.astro'
 ---
 
 <!DOCTYPE html>
@@ -51,7 +52,8 @@ import Sidebar from '../components/Sidebar.astro'
 																																																																			       </div> 
 																																																																				         </div>
 																																																																						 </div>
-		<Cont />																																																																			 
+		<hot />
+																																																																						 <Cont />																																																																			 
 	        
 		</div>
 		<div id="joa" class="absolute top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral /></div>
