--- a/src/components/hot.astro
+++ b/src/components/hot.astro
@@ -33,7 +33,7 @@ const movies = [
                                                                                                     {Array.from({ length: 5 }, (_, index) => (
                                                                                                                   <svg
                                                                                                                                 key={index}
-                                                                                                                                              class={w-4 h-4 ${index < movie.rating ? 'text-yellow-500' : 'text-gray-300'}}
+                                                                                                                          class={`w-4 h-4 ${index < movie.rating ? 'text-yellow-500' : 'text-gray-300'}`}
                                                                                                                                                             xmlns="http://www.w3.org/2000/svg"
                                                                                                                                                                           fill="currentColor"
                                                                                                                                                                                         viewBox="0 0 20 20"
